# Generated by Django 6.1.1 on 2026-09-16 02:23

import applications.models
import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Application',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('status', models.CharField(choices=[('intake', 'Intake'), ('eligibility_check', 'Eligibility check'), ('development_permit', 'Development permit'), ('permits', 'Building & trade permits'), ('construction', 'Construction'), ('inspections', 'Inspections'), ('registered', 'Registered'), ('complete', 'Complete'), ('on_hold', 'On hold'), ('withdrawn', 'Withdrawn')], db_index=True, default='intake', max_length=20)),
                ('pursuing_incentive', models.BooleanField(default=False)),
                ('estimated_cost', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('submitted_at', models.DateTimeField(blank=True, null=True)),
                ('assigned_staff', models.ForeignKey(blank=True, limit_choices_to=models.Q(('role__in', ['staff', 'admin'])), null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_applications', to=settings.AUTH_USER_MODEL)),
                ('homeowner', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='applications', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ApplicationStatusHistory',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('from_status', models.CharField(blank=True, choices=[('intake', 'Intake'), ('eligibility_check', 'Eligibility check'), ('development_permit', 'Development permit'), ('permits', 'Building & trade permits'), ('construction', 'Construction'), ('inspections', 'Inspections'), ('registered', 'Registered'), ('complete', 'Complete'), ('on_hold', 'On hold'), ('withdrawn', 'Withdrawn')], max_length=20, null=True)),
                ('to_status', models.CharField(choices=[('intake', 'Intake'), ('eligibility_check', 'Eligibility check'), ('development_permit', 'Development permit'), ('permits', 'Building & trade permits'), ('construction', 'Construction'), ('inspections', 'Inspections'), ('registered', 'Registered'), ('complete', 'Complete'), ('on_hold', 'On hold'), ('withdrawn', 'Withdrawn')], max_length=20)),
                ('note', models.TextField(blank=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='status_history', to='applications.application')),
                ('changed_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='+', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name_plural': 'application status history',
                'ordering': ['created_at'],
            },
        ),
        migrations.CreateModel(
            name='Property',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('street_address', models.CharField(max_length=255)),
                ('city', models.CharField(default='Calgary', max_length=100)),
                ('province', models.CharField(default='AB', max_length=2)),
                ('postal_code', models.CharField(max_length=10)),
                ('land_use_district', models.CharField(blank=True, max_length=50, null=True)),
                ('year_built', models.PositiveIntegerField(blank=True, null=True)),
                ('owner', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='properties', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name_plural': 'properties',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='application',
            name='property',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='applications', to='applications.property'),
        ),
        migrations.CreateModel(
            name='Suite',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('suite_type', models.CharField(choices=[('new', 'New secondary suite'), ('legalize_existing', 'Legalize existing suite')], max_length=20)),
                ('has_separate_entrance', models.BooleanField(blank=True, null=True)),
                ('description', models.TextField(blank=True)),
                ('property', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='suites', to='applications.property')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='application',
            name='suite',
            field=models.OneToOneField(on_delete=django.db.models.deletion.PROTECT, related_name='application', to='applications.suite'),
        ),
        migrations.CreateModel(
            name='Visit',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('visit_type', models.CharField(choices=[('site_assessment', 'Site assessment'), ('inspection', 'City inspection')], max_length=20)),
                ('scheduled_for', models.DateTimeField(db_index=True)),
                ('status', models.CharField(choices=[('scheduled', 'Scheduled'), ('completed', 'Completed'), ('cancelled', 'Cancelled'), ('no_show', 'No-show')], default='scheduled', max_length=20)),
                ('outcome_notes', models.TextField(blank=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='visits', to='applications.application')),
                ('assigned_staff', models.ForeignKey(blank=True, limit_choices_to=models.Q(('role__in', ['staff', 'admin'])), null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_visits', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['scheduled_for'],
            },
        ),
        migrations.CreateModel(
            name='ComplianceItem',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('item_type', models.CharField(choices=[('egress_window', 'Egress window(s) in each bedroom'), ('ceiling_height', 'Minimum ceiling height'), ('fire_separation', 'Fire separation from main dwelling'), ('smoke_co_alarms', 'Interconnected smoke + CO alarms'), ('separate_entrance', 'Separate / dedicated entrance'), ('mechanical_separation', 'Mechanical / furnace room separation'), ('parking', 'On-property parking'), ('amenity_space', 'Outdoor amenity space'), ('other', 'Other')], max_length=30)),
                ('status', models.CharField(choices=[('not_assessed', 'Not assessed'), ('needs_work', 'Needs work'), ('compliant', 'Compliant'), ('na', 'Not applicable')], default='not_assessed', max_length=20)),
                ('notes', models.TextField(blank=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='compliance_items', to='applications.application')),
            ],
            options={
                'ordering': ['item_type'],
                'constraints': [models.UniqueConstraint(condition=models.Q(('item_type', 'other'), _negated=True), fields=('application', 'item_type'), name='compliance_item_unique_per_application')],
            },
        ),
        migrations.CreateModel(
            name='Document',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('doc_type', models.CharField(choices=[('application_form', 'Completed application form'), ('site_plan', 'Site plan'), ('floor_plans', 'Floor plans'), ('elevations', 'Elevations'), ('abandoned_well_declaration', 'Abandoned Well Declaration'), ('site_contamination_statement', 'Site Contamination Statement'), ('public_tree_disclosure', 'Public Tree Disclosure Statement'), ('asbestos_abatement', 'Asbestos abatement form (pre-1990 homes)'), ('colour_photos', 'Colour photos (existing suite)'), ('land_title', 'Proof of ownership (land title)'), ('other', 'Other')], max_length=40)),
                ('file', models.FileField(blank=True, null=True, upload_to=applications.models.document_upload_path)),
                ('status', models.CharField(choices=[('required', 'Required'), ('uploaded', 'Uploaded'), ('accepted', 'Accepted'), ('rejected', 'Rejected')], default='required', max_length=20)),
                ('uploaded_at', models.DateTimeField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='applications.application')),
                ('uploaded_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['doc_type'],
                'constraints': [models.CheckConstraint(condition=models.Q(('status', 'required'), models.Q(('file__isnull', False), models.Q(('file', ''), _negated=True)), _connector='OR'), name='document_file_present_unless_required')],
            },
        ),
        migrations.CreateModel(
            name='Permit',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('permit_type', models.CharField(choices=[('development', 'Development permit'), ('building', 'Building permit'), ('electrical', 'Electrical permit'), ('plumbing', 'Plumbing permit'), ('gas', 'Gas permit'), ('mechanical', 'Mechanical / HVAC permit')], max_length=20)),
                ('permit_number', models.CharField(blank=True, max_length=50, null=True)),
                ('status', models.CharField(choices=[('not_required', 'Not required'), ('not_started', 'Not started'), ('applied', 'Applied'), ('approved', 'Approved'), ('rejected', 'Rejected'), ('expired', 'Expired')], default='not_started', max_length=20)),
                ('applied_date', models.DateField(blank=True, null=True)),
                ('approved_date', models.DateField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='permits', to='applications.application')),
            ],
            options={
                'ordering': ['permit_type'],
                'constraints': [models.UniqueConstraint(fields=('application', 'permit_type'), name='permit_unique_per_application'), models.CheckConstraint(condition=models.Q(('approved_date__isnull', True), ('applied_date__isnull', True), ('approved_date__gte', models.F('applied_date')), _connector='OR'), name='permit_approved_not_before_applied')],
            },
        ),
        migrations.AddConstraint(
            model_name='property',
            constraint=models.CheckConstraint(condition=models.Q(('year_built__isnull', True), models.Q(('year_built__gte', 1800), ('year_built__lte', 2100)), _connector='OR'), name='property_year_built_reasonable'),
        ),
        migrations.AddIndex(
            model_name='application',
            index=models.Index(fields=['status', '-created_at'], name='application_queue_idx'),
        ),
        migrations.AddConstraint(
            model_name='application',
            constraint=models.CheckConstraint(condition=models.Q(('estimated_cost__isnull', True), ('estimated_cost__gte', 0), _connector='OR'), name='application_cost_non_negative'),
        ),
    ]
